desktop-base (8.0.0~exp2) UNRELEASED; urgency=medium

  [ Aurélien COUDERC ]
  * Additional support for Lines theme:
    - Add plymouth Lines theme.
    - Add KDM Lines theme and make it default.
    - Add QML Lines theme for ksplash and make it default for new users.
    - Add widescreen alternative for grub background.
    - Add KDE wallpaper.

 -- Aurélien COUDERC <zecoucou@free.fr>  Wed, 03 Dec 2014 10:37:16 +0100

desktop-base (8.0.0~exp1) experimental; urgency=low

  [ Eshat Cakar ]
  * Ksplash: Avoid crash on resolutions with 600 pixels of
    height. (Closes: #689823)

  [ Paul Tagliamonte ]
  * Accept patch from Ulrich Hansen, fix 10-desktop-base.js to point to
    the symlink rather then hardcoding `joy'. (Closes: #690731)

  [ Yves-Alexis Perez ]
  * Initial support for Lines theme by Juliette Belin.
    - add the various ratio SVG wallpapers to backgrounds/ 
    - debian/{postinst,prerm}: update alternatives priority to make Lines the
      automatic/default one
    - gdm3/background.svg updated to use Lines login screen
    - grub/lines-grub.png added.
    - Makefile: install lines-grub grub background.
    - debian/copyright updated.
  * debian/control:
    - updated standards version to 3.9.6.

 -- Yves-Alexis Perez <corsac@debian.org>  Sat, 11 Oct 2014 15:35:39 +0200

desktop-base (7.0.3) unstable; urgency=low

  [ Eshat Cakar ]
  * Fixed various glitches in the KDM Theme:
    - Make pam error messages actually visible.
    - Don't cut off the last hostname letter.
    - Adjust font sizes and colors.
  * Ksplash: don't cut off blurred icons.
  * Reduce opacity of debian swirl in gdm/kdm background to be
    less distracting.

  [ Paul Tagliamonte ]
  * debian/rules: Use xz compression for binary packages. (Closes: #683903)
    - Thanks to Ansgar Burchardt <ansgar@debian.org> for the patch & bug.

  [ Jonathan Carter ]
  * Update joy theme to feature a themed password prompt.

 -- Paul Tagliamonte <paultag@debian.org>  Wed, 22 Aug 2012 20:19:11 -0400