@@ -3,7 +3,7 @@ Version=1.0
 Encoding=UTF-8
 Name=Debian Home Page
 Comment=The offical web site of the Debian Project
-Icon=/usr/share/pixmaps/debian-official-logo-small.png
+Icon=emblem-debian
 Type=Link
 URL=http://www.debian.org
 
