@@ -3,6 +3,6 @@ Version=1.0
 Encoding=UTF-8
 Name=Debian Reference Manual
 Comment=An introduction and reference manual for Debian
-Icon=/usr/share/pixmaps/debian-official-logo-small.png
+Icon=emblem-debian
 Type=Link
 URL=http://www.debian.org/doc/manuals/reference/
