@@ -7,6 +7,8 @@ desktop-base (8.0.0~exp2) UNRELEASED; urgency=medium
     - Add QML Lines theme for ksplash and make it default for new users.
     - Add widescreen alternative for grub background.
     - Add KDE wallpaper.
+  * Fix incorrect icon references in desktop files.
+    (Closes: #607838, #628116, #628146)
 
  -- Aurélien COUDERC <zecoucou@free.fr>  Wed, 03 Dec 2014 10:37:16 +0100
 
